--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="./css/style.css">
 		<script src="./js/camvas.js"></script>
 		<script src="./js/pico.js"></script>
-        <script src="./js/index.js"></script>
+        <script src=".. /js/index.js"></script>
     </head>
 	<body>
 		<h1 class="title">CC Monitoring</h1>
